# portable-atomic

./: .cirrus.yml  .cspell.json  .deny.toml  .external-types.toml  .git-blame-ignore-revs  .gitattributes  .markdownlint-cli2.yaml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  README.md  build.rs  memory.x  no_atomic.rs  version.rs
.cargo/: config.toml
.github/: bors.toml  dependabot.yml  zizmor.yml
bench/: Cargo.toml  version.rs
bench/benches/: bench.rs
bench/benches/imp/: intrinsics.rs  mutex_fallback.rs  spinlock_fallback.rs
builtin-hack/: Cargo.toml
ci/: gen.sh
portable-atomic-derive/: Cargo.toml
portable-atomic-derive/src/: attr.rs  derive.rs  error.rs  lib.rs
portable-atomic-util/: .external-types.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs
portable-atomic-util/src/: arc.rs  lib.rs  task.rs
portable-atomic-util/src/generic/: impls.rs  mod.rs
portable-atomic-util/src/tests/: generic.rs  mod.rs
portable-atomic-util/tests/: arc.rs  test.rs
portable-atomic-util/tests/expand/: struct-named-multiple.rs  struct-named-single.expanded.rs  union-single.rs
portable-atomic-util/tests/ui/: struct-invalid.rs  struct-large.stderr  union-different-size1.stderr  union-different-size2.stderr  union-invalid.rs
specs/: thumbv6m-none-eabi.json
src/: cfgs.rs  fallback.rs  float.rs  int.rs  lib.rs  misc.rs  serde.rs  utils.rs
target-specs/: aarch64-unknown-l4re-uclibc.json  aarch64-unknown-linux-uclibc.json  armv6-none-eabi.json  avr-unknown-gnu-atmega168.json  avr-unknown-gnu-atmega2560.json  msp430-unknown-none-elf.json  riscv32gc-unknown-none-elf.json  riscv64i-unknown-none-elf.json  thumbv6-none-eabi.json
tests/: compiletest.rs  expandtest.rs  test.rs
tests/api-test/: Cargo.toml  version.rs
tests/api-test/src/: helper.rs  lib.rs
tests/asm-test/: Cargo.toml
tests/asm-test/asm/core/: aarch64.asm  aarch64_be.asm  aarch64_ilp32.asm  aarch64_lse.asm  aarch64_lse2_lse128.asm  aarch64_lse2_lse128_rcpc3.asm  aarch64_lse_lse2.asm  aarch64_lse_lse2_rcpc3.asm  aarch64_lse_msvc.asm  aarch64_msvc.asm  arm64ec.asm  armv4t_linux.asm  armv5te_linux.asm  armv6m_single_core.asm  avr.asm  avr_rmw.asm  powerpc64_pwr8.asm  powerpc64le.asm  riscv32i_zaamo_single_core.asm  riscv32imac_zacas.asm  riscv64gc_zacas.asm  riscv64im_zaamo_single_core.asm  riscv64im_zabha_single_core.asm  s390x.asm  s390x_z15.asm  s390x_z15_no_vector.asm  s390x_z196.asm  x86.asm  x86_64_cmpxchg16b.asm  x86_64_cmpxchg16b_avx.asm  x86_64_cmpxchg16b_avx_msvc.asm  x86_64_cmpxchg16b_avx_x32.asm  x86_64_cmpxchg16b_msvc.asm
tests/asm-test/asm/portable-atomic/: aarch64.asm  aarch64_be.asm  aarch64_ilp32.asm  aarch64_lse.asm  aarch64_lse2_lse128.asm  aarch64_lse2_lse128_rcpc3.asm  aarch64_lse_lse2.asm  aarch64_lse_lse2_rcpc3.asm  aarch64_lse_msvc.asm  aarch64_msvc.asm  arm64ec.asm  armv4t_linux.asm  armv4t_single_core.asm  armv4t_single_core_disable_fiq.asm  armv5te_linux.asm  armv6m_single_core.asm  avr.asm  avr_rmw.asm  msp430.asm  powerpc64_pwr8.asm  powerpc64le.asm  riscv32i_single_core.asm  riscv32i_single_core_s_mode.asm  riscv32i_zaamo_single_core.asm  riscv32i_zabha_single_core.asm  riscv32imac_zacas.asm  riscv64gc_zacas.asm  riscv64im_single_core.asm  riscv64im_zaamo_single_core.asm  riscv64im_zabha_single_core.asm  s390x.asm  s390x_z15.asm  s390x_z15_no_vector.asm  s390x_z196.asm  x86.asm  x86_64_cmpxchg16b.asm  x86_64_cmpxchg16b_avx.asm  x86_64_cmpxchg16b_avx_msvc.asm  x86_64_cmpxchg16b_avx_x32.asm  x86_64_cmpxchg16b_msvc.asm  (+1 more)
tests/asm-test/asm/riscv32i-unknown-none-elf/: atomic_u16_load  atomic_u32_store  atomic_u8_load  atomic_u8_store
tests/asm-test/asm/riscv32imc-unknown-none-elf/: atomic_u16_store  atomic_u32_load
tests/asm-test/asm/riscv64gc-unknown-linux-gnu/: atomic_u16_load  atomic_u16_store  atomic_u32_load  atomic_u32_store  atomic_u64_load  atomic_u64_store  atomic_u8_load  atomic_u8_store
tests/asm-test/asm/x86_64-unknown-linux-gnu/: atomic_u128_load_asm  atomic_u128_load_intrinsics  atomic_u128_load_portable_atomic  atomic_u128_store_asm  atomic_u128_store_intrinsics  atomic_u128_store_portable_atomic  atomic_u16_load  atomic_u16_store  atomic_u32_load  atomic_u32_store  atomic_u64_load  atomic_u64_store  atomic_u8_load  atomic_u8_store
tests/asm-test/src/: lib.rs  main.rs
tests/asm-test/tests/: test.rs
tests/avr/: Cargo.toml  build.rs  diagram-mega.json  rust-toolchain.toml
tests/avr/.cargo/: config.toml
tests/avr/src/: main.rs
tests/cortex-m/: Cargo.toml  build.rs
tests/cortex-m/.cargo/: config.toml
tests/cortex-m/src/: main.rs
tests/gba/: Cargo.toml  build.rs  link.ld  linker.ld  rust-toolchain.toml
tests/gba/.cargo/: config.toml
tests/gba/src/: main.rs
tests/helper/: Cargo.toml
tests/helper/src/: cpuinfo.rs  critical_section_std.rs  lib.rs  once_lock.rs  serde.rs
tests/msp430/: Cargo.toml  build.rs  memory.x  rust-toolchain.toml
tests/msp430/.cargo/: config.toml
tests/msp430/src/: main.rs
tests/no-std/: Cargo.toml  no_atomic.rs
tests/no-std-qemu/: Cargo.toml  build.rs  memory.x  riscv-common.ld  riscv32.ld  riscv64.ld
tests/no-std-qemu/.cargo/: config.toml
tests/no-std-qemu/src/: main.rs
tests/no-std-test-helper/: Cargo.toml
tests/no-std-test-helper/src/: alloc.rs  api.rs  cortex-m.rs  lib.rs  riscv.rs
tests/no-std/src/: lib.rs
tests/nvptx/: Cargo.toml
tests/nvptx/src/: lib.rs  main.rs
tests/riscv/: Cargo.toml  build.rs  link.ld  link32.ld  link64.ld
tests/riscv/.cargo/: config.toml
tests/riscv/src/: main.rs
tests/xtensa/: Cargo.toml  diagram-esp32.json  diagram-esp32s2.json  diagram-esp32s3.json  wokwi-base.toml
tests/xtensa/.cargo/: config.toml
tests/xtensa/src/: main.rs
tools/: build.sh  fuchsia-test.sh  gen.sh  matrix.sh  mspdebug-test-runner.sh  no-std.sh  no_atomic.sh  nvptx-test.sh  publish.sh  runner.sh  systemsim-test.sh  target_spec.sh  test.sh  tidy.sh
tools/codegen/: Cargo.toml
tools/codegen/patches/: android.diff  freebsd.diff  fuchsia.diff  linux-gnu.diff  macos.diff  openbsd.diff
tools/codegen/src/: ffi.rs  file.rs  main.rs  target_spec.rs
(+136 files in other folders)
