[package]
name = "bench"
version = "0.0.0"
edition = "2018"
rust-version = "1.34" # Prevent clippy from suggesting a code that requires a new version to build.rs.
publish = false

[features]
default = ["fallback", "std"]
fallback = []
std = []

[dev-dependencies]
test-helper = { path = "../tests/helper", features = ["std"] }

# atomic = "0.6"
build-context = "0.1"
criterion = { default-features = false, git = "https://github.com/taiki-e/criterion.rs.git", branch = "dev" } # reduce deps
crossbeam-utils = "0.8"
fastrand = "2"
paste = "1"
quickcheck = { default-features = false, git = "https://github.com/taiki-e/quickcheck.git", branch = "dev" }  # https://github.com/BurntSushi/quickcheck/pull/304 + https://github.com/BurntSushi/quickcheck/pull/282 + lower MSRV
static_assertions = "1"

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
