[package]
name = "portable-atomic-util"
version = "0.3.18"
edition = "2018"
rust-version = "1.34"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/portable-atomic"
keywords = ["atomic"]
categories = ["concurrency", "data-structures", "embedded", "hardware-support", "no-std"]
description = """
Synchronization primitives built with portable-atomic.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
doc-scrape-examples = false

[features]
default = []
std = ["alloc"]
alloc = []

[dependencies]
portable-atomic = { version = "=0.3.18", path = "..", default-features = false }
