[package]
name = "api-test"
version = "0.0.0"
edition = "2018"
rust-version = "1.34" # Prevent clippy from suggesting a code that requires a new version to build.rs.
publish = false

[lib]
doctest = false
doc = false

[features]
float = ["portable-atomic/float"]

[dependencies]
portable-atomic = { path = "../.." }

paste = "1"
