[package]
name = "api-test"
version = "0.0.0"
edition = "2018"
rust-version = "1.34" # Prevent clippy from suggesting a code that requires a new version.
publish = false

[lib]
doc = false
doctest = false

[features]
float = ["portable-atomic/float"]

[dependencies]
portable-atomic = { path = "../.." }

paste = "1"

[lints]
workspace = true
