[package]
name = "asm-test"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
doctest = false
doc = false

[features]
default = ["anyhow", "duct", "fs-err", "indexmap", "lexopt", "rustc-demangle", "syn"]

[dependencies]
portable-atomic = { path = "../..", default-features = false, features = ["fallback"] }

anyhow = { version = "1", optional = true }
duct = { version = "0.13", optional = true }
fs-err = { version = "2", optional = true }
indexmap = { version = "1", optional = true }
lexopt = { version = "0.2", optional = true }
rustc-demangle = { version = "0.1", optional = true }
syn = { version = "1", optional = true, features = ["full"] }
