[package]
name = "avr-test"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
portable-atomic = { path = "../..", features = ["float"] }
test-helper = { path = "../helper" }

avr-device = "0.5"
paste = "1"
ufmt = "0.2"

[target.avr-unknown-gnu-atmega2560.dependencies]
# When updating the revision, the reminder to update rust-toolchain.toml to use
# the same toolchain as https://github.com/Rahix/avr-hal/blob/HEAD/rust-toolchain.toml.
arduino-hal = { git = "https://github.com/taiki-e/avr-hal.git", branch = "dev", features = ["arduino-mega2560"] }

[workspace]
resolver = "2"

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
# unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 is not available on MSRV
[lints.clippy]
lint_groups_priority = { level = "allow", priority = 1 } # clippy bug: https://github.com/rust-lang/rust-clippy/issues/12270

[profile.dev]
lto = true
opt-level = "s"
panic = "abort"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
