[package]
name = "avr-test"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
portable-atomic = { path = "../..", features = ["float"] }

paste = "1"
ufmt = "0.2"

[target.avr-unknown-gnu-atmega2560.dependencies]
arduino-hal = { features = ["arduino-mega2560"], git = "https://github.com/taiki-e/avr-hal.git", rev = "352567e" }

[workspace]
resolver = "2"

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(qemu)',
] }
# unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 is not available on MSRV
[lints.clippy]
lint_groups_priority = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/12920

[profile.dev]
lto = true
opt-level = "s"
panic = "abort"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
