[package]
name = "cortex-m-test"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"

[features]
default = ["int"]
int = []
float = ["portable-atomic/float"]

[dependencies]
portable-atomic = { path = "../.." }

cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
paste = "1"
