[package]
name = "cortex-m-test"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"

[dependencies]
portable-atomic = { path = "../..", features = ["float"] }
test-helper = { path = "../helper" }

cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
paste = "1"

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
