[package]
name = "gba-test"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"

[dependencies]
portable-atomic = { path = "../..", features = ["float"] }
test-helper = { path = "../helper" }

gba = "0.10"
paste = "1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
