[package]
name = "gba-test"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"

[dependencies]
portable-atomic = { path = "../..", features = ["float"] }
test-helper = { path = "../helper" }

gba = "0.11"
paste = "1"

[profile.dev]
# TODO: "GBA: Illegal opcode: e7ffdefe" on opt-level=0, GBA hang on opt-level={1,s,z}
opt-level = 2
panic = "abort"

[profile.release]
panic = "abort"
