[package]
name = "test-helper"
version = "0.0.0"
edition = "2018"
rust-version = "1.34"
publish = false

[lib]
doctest = false
doc = false
test = false

[features]
std = ["critical-section", "fs-err", "serde", "serde_test", "libc", "windows-sys"]

[dependencies]
critical-section = { version = "1", optional = true, features = ["restore-state-bool"] }
fs-err = { version = "2", optional = true }
serde = { version = "1", optional = true }
serde_test = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.140", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", optional = true, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[lints]
workspace = true
