[package]
name = "test-helper"
version = "0.0.0"
edition = "2018"
rust-version = "1.34" # Prevent clippy from suggesting a code that requires a new version.
publish = false

[lib]
doctest = false
doc = false
test = false

[features]
std = ["fs-err", "libc", "windows-sys"]

[dependencies]
critical-section = { version = "1", optional = true, features = ["restore-state-bool"] }
fs-err = { version = "2", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.140", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", optional = true, features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[lints]
workspace = true
