[package]
name = "no-std-qemu-test"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
portable-atomic = { path = "../..", features = ["float"] }

paste = "1"
semihosting = { version = "0.1", features = ["stdio", "panic-handler"] }
semihosting-no-std-test-rt = { features = ["qemu-system"], git = "https://github.com/taiki-e/semihosting.git", rev = "3874a1e8a4904c04a1c0e1f32cab11e2b303aba6" }

[workspace]
resolver = "2"

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
# unsafe_op_in_unsafe_fn = "warn" # Set at crate-level instead since https://github.com/rust-lang/rust/pull/100081 is not available on MSRV
[lints.clippy]
lint_groups_priority = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/12920
single_match = { level = "allow", priority = 1 }

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
