[package]
name = "no-std-test-helper"
version = "0.1.0"
edition = "2018"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
no-std-test-helper-macro = { version = "=0.1.0", path = "../no-std-test-helper-macro" }

[target.'cfg(target_os = "none")'.dependencies]
portable-atomic = { version = "0.3", path = "../.." }

[target.'cfg(all(any(target_arch = "riscv32", target_arch = "riscv64"), target_os = "none"))'.dependencies]
fdt = "0.1"

[target.'cfg(all(target_arch = "arm", target_os = "none", target_feature = "mclass"))'.dependencies]
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
