[package]
name = "no-std-test-helper"
version = "0.1.0"
edition = "2018"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
alloc = ["linked_list_allocator"]

[dependencies]
no-std-test-helper-macro = { version = "=0.1.0", path = "../no-std-test-helper-macro" }

[target.'cfg(target_os = "none")'.dependencies]
portable-atomic = { version = "0.3", path = "../.." }

linked_list_allocator = { version = "0.10", optional = true, default-features = false, git = "https://github.com/taiki-e/linked-list-allocator.git", branch = "dev" }

[target.'cfg(all(any(target_arch = "riscv32", target_arch = "riscv64"), target_os = "none"))'.dependencies]
fdt = "0.1"
riscv = "0.8"

[target.'cfg(all(target_arch = "arm", target_os = "none", target_feature = "mclass"))'.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
