[package]
name = "no-std"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
doctest = false
doc = false

[features]
outline-atomics = ["portable-atomic/outline-atomics"]
float = ["portable-atomic/float"]

[dependencies]
portable-atomic = { path = "../..", default-features = false, features = ["fallback"] }
