[package]
name = "riscv-test"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"

[dependencies]
portable-atomic = { path = "../..", features = ["float"] }
test-helper = { path = "../helper" }

paste = "1"
semihosting = { version = "0.1", features = ["stdio", "panic-handler"] }
